--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Nicholas Becker
+title: nicholas becker
 email: nbecker6 - at - jhu - dot - edu
 emailLink: nbecker6@jhu.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Department of Cognitive Science, <br>
-  Johns Hopkins University
+  department of cognitive science, <br>
+  johns hopkins university
 #baseurl: "" # the subpath of your site, e.g. /blog/
 #url: "http://callmenick.net" # the base hostname & protocol for your site
 #github_username:  nrbecker
