--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@ title: nicholas becker
 email: nbecker6 - at - jhu - dot - edu
 emailLink: nbecker6@jhu.edu
 description: > # this means to ignore newlines until "baseurl:"
-  department of cognitive science, <br>
-  johns hopkins university
+  department of cognitive science <br>
+  johns hopkins university <br>
+  krieger hall, room 234b
 #baseurl: "" # the subpath of your site, e.g. /blog/
 #url: "http://callmenick.net" # the base hostname & protocol for your site
 #github_username:  nrbecker
