--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: nicholas becker
 email: nbecker6 - at - jhu - dot - edu
-emailLink: nbecker6@jhu.edu
+#emailLink: 
 description: > # this means to ignore newlines until "baseurl:"
   department of cognitive science <br>
   johns hopkins university <br>
